<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_add_ressource"
        tools:background="@android:color/transparent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/widget_action_setting"
                android:id="@+id/iconTextView"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="@drawable/border"
                android:paddingBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:textAlignment="gravity"
                android:gravity="center_vertical|center_horizontal" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/widget_action_name"
                    android:id="@+id/textName"
                    android:layout_alignParentStart="true"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:textSize="18dp"
                    android:textIsSelectable="true" />

                <AutoCompleteTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_marginStart="10dp"
                    android:id="@+id/editName"
                    android:layout_below="@+id/textName"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:hint="Action Mutli Widget"
                    android:background="#ffffff"
                    android:paddingStart="5dp"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/widget_on"
                    android:id="@+id/textViewEtat"
                    android:layout_below="@+id/editName"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <AutoCompleteTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editEtat"
                    android:textSize="15sp"
                    android:layout_below="@+id/textViewEtat"
                    android:layout_alignParentStart="true"
                    android:hint="type=cmd&amp;id=28"
                    android:background="#ffffff"
                    android:paddingStart="5sp"
                    android:layout_marginTop="5dp"
                    android:paddingEnd="5sp"
                    android:layout_marginStart="10sp"
                    android:layout_alignParentEnd="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/widget_action_image_on"
                    android:id="@+id/textViewOn"
                    android:layout_below="@+id/editEtat"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/imageButtonOn"
                    android:src="@drawable/toggle_metal_on"
                    android:background="#00ffffff"
                    android:scaleType="fitCenter"
                    android:layout_below="@+id/textViewOn"
                    android:layout_marginStart="10sp"
                    android:paddingTop="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewOff"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/imageButtonOn"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:text="@string/widget_action_image_off" />

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/imageButtonOff"
                    android:src="@drawable/toggle_metal_off"
                    android:scaleType="fitCenter"
                    android:background="#00ffffff"
                    android:layout_below="@+id/textViewOff"
                    android:layout_marginStart="10sp"
                    android:paddingTop="5dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/widget_save"
                    android:id="@+id/buttonSave"
                    android:layout_centerHorizontal="true"
                    android:textColor="#FFFFFF"
                    android:shadowColor="#A8A8A8"
                    android:layout_below="@+id/imageButtonOff"
                    android:background="@drawable/buttonshape_primary"
                    android:drawableStart="@android:drawable/ic_menu_save" />

            </RelativeLayout>

        </ScrollView>

    </LinearLayout>


